--- a/include/binary_sensor/home.yaml
+++ b/include/binary_sensor/home.yaml
@@ -6,3 +6,4 @@
     - binary_sensor.living_room_occupancy
     - binary_sensor.kitchen_occupancy
     - binary_sensor.hallway_occupancy
+    - binary_sensor.bedroom_occupancy
