--- a/include/light/kitchen.yaml
+++ b/include/light/kitchen.yaml
@@ -5,11 +5,20 @@
     - light.kitchen_ambient_lights
     - light.kitchen_accent_lights
 
-- platform: group
-  unique_id: kitchen_ambient_lights
-  name: "Kitchen Ambient Lights"
-  entities:
-    - light.light_b55c_light_1
+- platform: template
+  lights:
+    kitchen_ambient_lights:
+      unique_id: kitchen_ambient_lights
+      friendly_name: "Kitchen Ambient Lights"
+      value_template: "{{ is_state('switch.switch_8920_switch', 'on') }}"
+      turn_on:
+        service: switch.turn_on
+        data:
+          entity_id: switch.switch_8920_switch
+      turn_off:
+        service: switch.turn_off
+        data:
+          entity_id: switch.switch_8920_switch
 
 - platform: group
   unique_id: kitchen_accent_lights
