--- a/include/sensor/home.yaml
+++ b/include/sensor/home.yaml
@@ -10,3 +10,16 @@
     # bedroom
     - sensor.fan_1d90_temperature
     - sensor.clock_3006_temperature
+    # bathroom
+    - sensor.therm_d7f6_temperature
+
+- platform: min_max
+  unique_id: home_humidity
+  name: "Home Humidity"
+  type: mean
+  entity_ids:
+    # bedroom
+    - sensor.fan_1d90_humidity
+    - sensor.clock_3006_humidity
+    # bathroom
+    - sensor.therm_d7f6_humidity
