--- a/automations.yaml
+++ b/automations.yaml
@@ -696,3 +696,47 @@
         hours: 0
         minutes: 0
         seconds: 0
+- id: '1727605152388'
+  alias: Bathroom Fan
+  description: ''
+  trigger:
+  - id: humidity_above_threshold
+    platform: template
+    value_template: '{{ states(''sensor.bathroom_humidity'') | float > (states(''sensor.bathroom_humidity_mean'')
+      | float + 15) }}'
+    for:
+      hours: 0
+      minutes: 0
+      seconds: 30
+  - id: humidity_below_threshold
+    platform: template
+    value_template: '{{ states(''sensor.bathroom_humidity'') | float < (states(''sensor.bathroom_humidity_mean'')
+      | float + 10) }}'
+    for:
+      hours: 0
+      minutes: 1
+      seconds: 0
+  condition: []
+  action:
+  - choose:
+    - conditions:
+      - condition: trigger
+        id:
+        - humidity_above_threshold
+      sequence:
+      - action: fan.turn_on
+        metadata: {}
+        data: {}
+        target:
+          entity_id: fan.bathroom_fan
+    - conditions:
+      - condition: trigger
+        id:
+        - humidity_below_threshold
+      sequence:
+      - action: fan.turn_off
+        target:
+          entity_id:
+          - fan.bathroom_fan
+        data: {}
+  mode: single
