--- a/esphome/btn-74ad.yaml
+++ b/esphome/btn-74ad.yaml
@@ -21,8 +21,11 @@ ota:
     id: ota_pass
 
 wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
+  networks:
+    - ssid: !secret wifi_ssid
+      password: !secret wifi_password
+    - ssid: !secret wifi_ssid2
+      password: !secret wifi_password
 
   ap:
     ssid: ${device_name}
