--- a/esphome/light-638a.yaml
+++ b/esphome/light-638a.yaml
@@ -28,8 +28,12 @@ ota:
     password: !secret ota_password
 
 wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
+  networks:
+    - ssid: !secret wifi_ssid
+      password: !secret wifi_password
+    - ssid: !secret wifi_ssid2
+      password: !secret wifi_password
+
   ap:
     ssid: ${device_name}
     password: !secret wifi_fallback_ap_password
