--- a/include/sensor/living_room.yaml
+++ b/include/sensor/living_room.yaml
@@ -4,6 +4,7 @@
   type: mean
   entity_ids:
     - sensor.occupancy_7ae8_light_sensor_light_level
+
 - platform: min_max
   unique_id: living_room_temperature
   name: "Living Room Temperature"
@@ -12,3 +13,17 @@
     - sensor.fan_6ab8_temperature
     - sensor.therm_b31f_therm_b31f
     - sensor.therm_977c_therm_977c
+
+- platform: min_max
+  unique_id: living_room_desk_temperature
+  name: "Living Room Desk Temperature"
+  type: mean
+  entity_ids:
+    - sensor.therm_977c_therm_977c
+
+- platform: min_max
+  unique_id: living_room_sofa_temperature
+  name: "Living Room Sofa Temperature"
+  type: mean
+  entity_ids:
+    - sensor.therm_b31f_therm_b31f
