--- a/blueprints/automation/occupancy_device.yaml
+++ b/blueprints/automation/occupancy_device.yaml
@@ -10,28 +10,25 @@ blueprint:
       description: The sensor detecting occupancy
       selector:
         entity:
-          domain: binary_sensor
-          device_class: occupancy
+          filter:
+            domain: binary_sensor
+            device_class: occupancy
     daylight_sensor:
       name: Daylight Sensor
       description: The sensor detecting daylight
       selector:
         entity:
-          domain: binary_sensor
-          device_class: light
+          filter:
+            domain: binary_sensor
+            device_class: light
       default: ""
     default_scene_occupied:
       name: Default Scene (Occupied)
       description: The scene to activate when occupancy is detected
       selector:
         entity:
-          domain: scene
-    temporary_scene_name:
-      name: Temporary Scene Name
-      description: The entity name where the state is temporarily saved
-      selector:
-        text:
-          prefix: "scene."
+          filter:
+            domain: scene
     off_delay_duration:
       name: Off Delay
       description: >
@@ -43,49 +40,34 @@ blueprint:
         hours: 0
         minutes: 2
         seconds: 0
-    temporary_scene_expiration_duration:
-      name: Temporary Scene Expiration Duration
-      description: >
-        The duration of time after which the temporary scene is ingored and the 
-        default scene is used on occupation.
-      selector:
-        duration:
-      default:
-        hours: 1
-        minutes: 0
-        seconds: 0
 
 variables:
   # save in variable so that it can be used in templates
-  temporary_scene_name: !input temporary_scene_name
-  temporary_scene_expiration_duration: !input temporary_scene_expiration_duration
   default_scene_occupied: !input default_scene_occupied
   target_entities: "{{ state_attr(default_scene_occupied, 'entity_id') | list }}"
   daylight_sensor: !input daylight_sensor
 
-trigger:
+triggers:
   - alias: Any change in daylight
-    platform: template
+    trigger: template
     value_template: "{{ daylight_sensor == '' or is_state(daylight_sensor, 'off') }}"
   - alias: Change of occupancy detected to occupancy clear for the specified duration
-    platform: state
+    trigger: state
     entity_id: !input occupancy_sensor
     from: "on"
     to: "off"
     for: !input off_delay_duration
     id: "occupancy_clear"
   - alias: Change of occupancy clear to occupancy detected.
-    platform: state
+    trigger: state
     entity_id: !input occupancy_sensor
     from: "off"
     to: "on"
     id: "occupancy_detected"
 
-# condition:
-
 action:
   - choose:
-      # Saved state: activate saved scene based on occupancy if its not expired
+      # activate default scene on occupancy
       - conditions:
           - alias: >
               Check that triggered by a change in occupancy from clear to 
@@ -94,56 +76,12 @@ action:
             id:
               - "occupancy_detected"
         sequence:
-          - choose:
-              - conditions:
-                  - alias: "Check that saved state is available"
-                    condition: template
-                    value_template: "{{ states.scene[temporary_scene_name] is not none }}"
-                  - alias: "Check that the saved state is not expired"
-                    condition: template
-                    value_template: >
-                      {% set to_last_changed = trigger.to_state.last_changed %}
-                      {% set from_last_changed = trigger.from_state.last_changed %}
-                      {% set temporary_scene_expiration_duration_timedelta = timedelta(
-                          days = temporary_scene_expiration_duration.days | default(0),
-                          hours = temporary_scene_expiration_duration.hours | default(0),
-                          minutes = temporary_scene_expiration_duration.minutes | default(0),
-                          seconds = temporary_scene_expiration_duration.seconds | default(0),
-                          milliseconds = temporary_scene_expiration_duration.milliseconds | default(0)
-                      ) %}
-                      {% if to_last_changed is not none and from_last_changed is not none %}
-                        {% set time_difference = as_datetime(to_last_changed) - as_datetime(from_last_changed)  %}
-                        {% if time_difference < temporary_scene_expiration_duration_timedelta %}
-                          True
-                        {% else %}
-                          False
-                        {% endif %}
-                      {% else %}
-                        False
-                      {% endif %}
-                sequence:
-                  - alias: "Restore the saved state"
-                    action: scene.turn_on
-                    target:
-                      entity_id: "scene.{{ temporary_scene_name }}"
-              - conditions:
-                  - condition: template
-                    value_template: "{{ daylight_sensor == '' or is_state(daylight_sensor, 'off') }}"
-                sequence:
-                  - action: scene.turn_on
-                    data: {}
-                    target:
-                      entity_id: !input default_scene_occupied
-          - if:
-              - alias: "Check that saved state is available"
-                condition: template
-                value_template: "{{ states.scene[temporary_scene_name] is not none }}"
-            then:
-              - alias: "Clean up the saved state, regardless of expired or not"
-                action: scene.delete
-                target:
-                  entity_id: "scene.{{ temporary_scene_name }}"
-      # Save scene when no occupancy for duration
+          - action: scene.turn_on
+            data: {}
+            target:
+              entity_id: !input default_scene_occupied
+
+      # turn off when no occupancy for duration
       - conditions:
           - alias: >
               Check that it was triggered by a change in occupancy from 
@@ -152,12 +90,6 @@ action:
             id:
               - "occupancy_clear"
         sequence:
-          - action: scene.create
-            data:
-              scene_id: !input temporary_scene_name
-              snapshot_entities: "{{ target_entities }}"
-          - alias: "Wait 2 seconds"
-            delay: 2
           - action: homeassistant.turn_off
             target:
               entity_id: "{{ target_entities }}"
