--- a/include/template/living_room.yaml
+++ b/include/template/living_room.yaml
@@ -1,7 +1,7 @@
 - trigger:
-    - platform: state
+    - trigger: state
       entity_id: sensor.living_room_illuminance
-    - platform: state
+    - trigger: state
       entity_id: light.living_room_ambient_lights
       to: "on"
   sensor:
