--- a/configuration.yaml
+++ b/configuration.yaml
@@ -4,7 +4,7 @@ default_config:
 homeassistant:
   customize_glob:
     "sensor.*_temperature":
-      device_class: termerature
+      device_class: temperature
       icon: "mdi:thermometer"
     "sensor.*_humidity":
       device_class: humidity
