--- a/include/light/hallway.yaml
+++ b/include/light/hallway.yaml
@@ -11,10 +11,10 @@
       friendly_name: "Hallway Ambient Lights"
       value_template: "{{ is_state('switch.switch_f37c', 'on') }}"
       turn_on:
-        service: switch.turn_on
+        action: switch.turn_on
         data:
           entity_id: switch.switch_f37c
       turn_off:
-        service: switch.turn_off
+        action: switch.turn_off
         data:
           entity_id: switch.switch_f37c
