--- a/include/light/kitchen.yaml
+++ b/include/light/kitchen.yaml
@@ -12,11 +12,11 @@
       friendly_name: "Kitchen Ambient Lights"
       value_template: "{{ is_state('switch.switch_8920_switch', 'on') }}"
       turn_on:
-        service: switch.turn_on
+        action: switch.turn_on
         data:
           entity_id: switch.switch_8920_switch
       turn_off:
-        service: switch.turn_off
+        action: switch.turn_off
         data:
           entity_id: switch.switch_8920_switch
 
