--- a/include/light/living_room.yaml
+++ b/include/light/living_room.yaml
@@ -67,11 +67,11 @@
       friendly_name: "Living Room Sofa Windowsill Light"
       value_template: "{{ is_state('switch.switch_50b5', 'on') }}"
       turn_on:
-        service: switch.turn_on
+        action: switch.turn_on
         data:
           entity_id: switch.switch_50b5
       turn_off:
-        service: switch.turn_off
+        action: switch.turn_off
         data:
           entity_id: switch.switch_50b5
       availability_template: "{{ is_state('switch.switch_50b5', 'unavailable') == False }}"
@@ -83,11 +83,11 @@
       friendly_name: "Living Room 3D Printer Light"
       value_template: "{{ is_state('switch.switch_ac16', 'on') }}"
       turn_on:
-        service: switch.turn_on
+        action: switch.turn_on
         data:
           entity_id: switch.switch_ac16
       turn_off:
-        service: switch.turn_off
+        action: switch.turn_off
         data:
           entity_id: switch.switch_ac16
       availability_template: "{{ is_state('switch.switch_ac16', 'unavailable') == False }}"
