--- a/include/sensor/bathroom.yaml
+++ b/include/sensor/bathroom.yaml
@@ -11,34 +11,15 @@
   entity_ids:
     - sensor.therm_d7f6_temperature
 - platform: min_max
-  unique_id: bathroom_humidity
-  name: "Bathroom Humidity"
+  unique_id: bathroom_relative_humidity
+  name: "Bathroom Relative Humidity"
   type: mean
   entity_ids:
     - sensor.therm_d7f6_humidity
 - platform: statistics
-  name: "Bathroom Humidity Mean"
-  unique_id: bathroom_humidity_mean
-  entity_id: sensor.bathroom_humidity
-  max_age:
-    hours: 24
-  state_characteristic: mean
-- platform: statistics
-  name: "Bathroom Humidity Median"
-  unique_id: bathroom_humidity_median
-  entity_id: sensor.bathroom_humidity
+  name: "Bathroom Relative Humidity Median"
+  unique_id: bathroom_relative_humidity_median
+  entity_id: sensor.bathroom_relative_humidity
   max_age:
     hours: 24
   state_characteristic: median
-- platform: min_max
-  unique_id: bathroom_humidity
-  name: "Bathroom Humidity"
-  type: mean
-  entity_ids:
-    - sensor.therm_d7f6_humidity
-- platform: min_max
-  unique_id: bathroom_atmospheric_pressure
-  name: "Bathroom Atmospheric Pressure"
-  type: mean
-  entity_ids:
-    - sensor.therm_d7f6_pressure
