--- a/include/template/kitchen.yaml
+++ b/include/template/kitchen.yaml
@@ -44,3 +44,14 @@
         {% else %}
           {{ illuminance | float > threshold }}
         {% endif %}
+- sensor:
+    - name: "Kitchen Absolute Humidity"
+      unique_id: kitchen_absolute_humidity
+      unit_of_measurement: "g/m³"
+      state: >
+        {% set T = states('sensor.kitchen_temperature') | float %}
+        {% set RH = states('sensor.kitchen_relative_humidity') | float %}
+        {% set es = 6.112 * (2.718281828459 ** ((17.67 * T) / (T + 243.5))) %}
+        {% set AH = (es * RH * 2.1674) / (T + 273.15) %}
+        {{ AH | round(2) }}
+      state_class: "measurement"
