--- a/include/sensor/living_room.yaml
+++ b/include/sensor/living_room.yaml
@@ -11,19 +11,26 @@
   type: mean
   entity_ids:
     - sensor.fan_6ab8_temperature
-    - sensor.therm_b31f_therm_b31f
-    - sensor.therm_977c_therm_977c
+    - sensor.therm_b31f_temperature_1
+    - sensor.therm_977c_temperature
+
+- platform: min_max
+  unique_id: living_room__radiator_temperature
+  name: "Living Room Radiator Temperature"
+  type: mean
+  entity_ids:
+    - sensor.therm_b31f_temperature_2
 
 - platform: min_max
   unique_id: living_room_desk_temperature
   name: "Living Room Desk Temperature"
   type: mean
   entity_ids:
-    - sensor.therm_977c_therm_977c
+    - sensor.therm_b31f_temperature_1
 
 - platform: min_max
   unique_id: living_room_sofa_temperature
   name: "Living Room Sofa Temperature"
   type: mean
   entity_ids:
-    - sensor.therm_b31f_therm_b31f
+    - sensor.therm_977c_temperature
