--- a/include/sensor/living_room.yaml
+++ b/include/sensor/living_room.yaml
@@ -13,6 +13,7 @@
     - sensor.fan_6ab8_temperature
     - sensor.therm_b31f_temperature_1
     - sensor.therm_977c_temperature
+    - sensor.climate_44a4_temperature
 
 - platform: min_max
   unique_id: living_room__radiator_temperature
