--- a/automations.yaml
+++ b/automations.yaml
@@ -855,3 +855,91 @@
       target:
         entity_id: light.living_room_3d_printer_light
   mode: single
+- id: '1729974639126'
+  alias: Living Room Heater
+  description: ''
+  triggers:
+  - trigger: state
+    entity_id:
+    - binary_sensor.living_room_occupancy
+    to: 'off'
+    for:
+      hours: 0
+      minutes: 20
+      seconds: 0
+    id: occupancy_clear
+  - trigger: state
+    entity_id:
+    - binary_sensor.living_room_occupancy
+    to: 'on'
+    for:
+      hours: 0
+      minutes: 2
+      seconds: 0
+    id: occupancy_detected
+  - trigger: state
+    entity_id:
+    - binary_sensor.front_door
+    to: 'on'
+    for:
+      hours: 0
+      minutes: 5
+      seconds: 0
+    id: front_door_open
+  - trigger: state
+    entity_id:
+    - binary_sensor.front_door
+    to: 'off'
+    for:
+      hours: 0
+      minutes: 1
+      seconds: 0
+    id: front_door_closed
+  conditions: []
+  actions:
+  - choose:
+    - conditions:
+      - condition: trigger
+        id:
+        - occupancy_detected
+      sequence:
+      - action: climate.set_preset_mode
+        metadata: {}
+        data:
+          preset_mode: comfort
+        target:
+          entity_id: climate.climate_44a4_thermostat
+    - conditions:
+      - condition: trigger
+        id:
+        - occupancy_clear
+      sequence:
+      - action: climate.set_preset_mode
+        metadata: {}
+        data:
+          preset_mode: eco
+        target:
+          entity_id: climate.climate_44a4_thermostat
+    - conditions:
+      - condition: trigger
+        id:
+        - front_door_closed
+      sequence:
+      - action: climate.set_hvac_mode
+        metadata: {}
+        data:
+          hvac_mode: heat
+        target:
+          entity_id: climate.climate_44a4_thermostat
+    - conditions:
+      - condition: trigger
+        id:
+        - front_door_open
+      sequence:
+      - action: climate.set_hvac_mode
+        metadata: {}
+        data:
+          hvac_mode: 'off'
+        target:
+          entity_id: climate.climate_44a4_thermostat
+  mode: single
