--- a/esphome/therm-b31f.yaml
+++ b/esphome/therm-b31f.yaml
@@ -40,9 +40,11 @@ sensor:
   - platform: dallas_temp
     address: 0x1f011937b3d80428
     name: "Temperature 1"
+    update_interval: 15s
   - platform: dallas_temp
     address: 0x57011937e2f97228
     name: "Temperature 2"
+    update_interval: 15s
 
 status_led:
   pin:
